--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 
 header {
     width: 100%;
-    height: 80px;
+    height: 65px;
     background-color: #d2c3b6;
     display: flex;
     justify-content: space-between;
@@ -42,8 +42,10 @@ nav > ul {
 nav > ul > li {
     color: white;
     margin: 0 0.2rem;
-    padding: 0.2rem;
+    padding: 0.2rem 0.4rem;
     display: block;
+    border-radius: 5px;
+    font-size: 20px;
 }
 
 nav > ul > li:hover {
@@ -59,6 +61,8 @@ li > a {
 
 main {
     padding: 100px 40px 0 40px;
+    margin: auto;
+    width: 80%;
 }
 
 .main-photo {
@@ -97,4 +101,12 @@ footer {
 
 .about-me-paragraph {
     padding: 5% 10%;
+}
+
+.resume h2 {
+    text-decoration: underline;
+}
+
+.resume ul {
+    padding: 0px 0px 30px 0px;
 }
