--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     color: var(--text-color);
     margin: 0;
     font-family: king;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 header {
@@ -70,7 +70,7 @@ li > a {
 }
 
 main {
-    padding: 100px 40px 0 40px;
+    padding: 100px 40px 120px 40px;
     margin: auto;
     width: 80%;
 }
@@ -107,7 +107,7 @@ footer {
     text-align: center;
     background-color: var(--header-color);
     color: var(--background-color);
-    position: absolute;
+    position: fixed;
     bottom: 0;
     display: block;
     width: 100vw;
@@ -139,4 +139,18 @@ footer {
     padding: 0.5rem 2rem;
     list-style: none;
     font-weight: thin;
+}
+
+#past-projects {
+    padding-top: 15px;
+}
+
+h2 {
+    margin: auto;
+    font-size: 20px;
+}
+
+video {
+    border-radius: 5px;
+    border: 3px solid var(--text-color);
 }
