--- a/styles.css
+++ b/styles.css
@@ -1,156 +1,185 @@
 :root {
-    --background-color: #EFF2E4;
-    --header-color: #d2c3b6;
-    --header-text-color: white;
-    --text-color: rgb(146, 109, 109);
-    --hover-color: #1b1b32;
-    --border-color: rgba(99, 91, 91, 0.33);
+  --background-color: #eff2e4;
+  --header-color: #d2c3b6;
+  --header-text-color: white;
+  --text-color: rgb(146, 109, 109);
+  --hover-color: #1b1b32;
+  --border-color: rgba(99, 91, 91, 0.33);
 }
 
 @font-face {
-    font-family: king;
-    src: url("fonts/King.woff2");
+  font-family: king;
+  src: url("fonts/King.woff2");
+}
+
+/* General */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: var(--background-color);
-    color: var(--text-color);
-    margin: 0;
-    font-family: king;
-    overflow-x: hidden;
-}
-
-header {
-    width: 100%;
-    height: 4.5rem;
-    background-color: var(--header-color);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    padding: 0 20px;
-}
-
-nav {
-    width: 40%;
-    display: flex;
-    justify-content: space-evenly;
-    color: var(--background-color);
-}
-
-nav > ul {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-    padding-inline-start: 0;
-    margin-block: 0;
-    height: 100%;
-}
-
-nav > ul > li {
-    color: var(--header-text-color);
-    margin: 0 0.2rem;
-    padding: 0.3rem 0.4rem;
-    display: block;
-    border-radius: 5px;
-    font-size: 20px;
-}
-
-nav > ul > li:hover {
-    background-color: var(--background-color);
-    color: var(--hover-color);
-    cursor: pointer;
-}
-
-li > a {
-    color: inherit;
-    text-decoration: none;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  font-family: king;
+  overflow-x: hidden;
 }
 
 main {
-    padding: 100px 40px 120px 40px;
-    margin: auto;
-    width: 80%;
+  padding: 100px 40px 120px 40px;
+  margin: auto;
+  width: 80%;
 }
 
-.main-photo {
-    max-width: 35%;
+h1,
+h2,
+h3,
+h4 {
+  color: var(--text-color);
 }
 
-.main-page {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
-.main-page-info {
-    display: block;
-    border: var(--border-color);
-    border-style: solid;
-    padding: 20px;
-    border-radius: 20px;
+p {
+  margin: 0.5rem 0;
 }
 
-.small-info {
-    padding: 20px;
-    text-align: center;
-}
-
-header h1 {
-    color: var(--header-text-color);
-}
-
-footer {
-    padding: 20px;
-    text-align: center;
-    background-color: var(--header-color);
-    color: var(--background-color);
-    position: fixed;
-    bottom: 0;
-    display: block;
-    width: 100vw;
-}
-
-.about-me-paragraph {
-    padding: 5% 10%;
-    line-height: 2rem;
-}
-
-.resume-item {
-    border-bottom: 3px solid var(--text-color);
-    margin-top: 40px;
-}
-
-.resume h2 {
-    text-decoration: underline;
-}
-
-.resume ul {
-    padding: 0px 0px 30px 0px;
-}
-
-.resume-item:last-of-type {
-    border: none;
-}
-
-.resume li {
-    padding: 0.5rem 2rem;
-    list-style: none;
-    font-weight: thin;
-}
-
-#past-projects {
-    padding-top: 15px;
-}
-
-h2 {
-    margin: auto;
-    font-size: 20px;
+img {
+  width: 100%;
 }
 
 video {
-    border-radius: 5px;
-    border: 3px solid var(--text-color);
+  border-radius: 5px;
+  border: 3px solid var(--text-color);
+}
+
+/* Header and Navber */
+header {
+  width: 100%;
+  height: 4.5rem;
+  background-color: var(--header-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  padding: 0 20px;
+}
+
+header h1 {
+  color: var(--header-text-color);
+}
+
+nav {
+  width: 40%;
+  display: flex;
+  justify-content: space-evenly;
+  color: var(--background-color);
+}
+
+nav > ul {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-inline-start: 0;
+  margin-block: 0;
+  height: 100%;
+}
+
+nav > ul > li {
+  color: var(--header-text-color);
+  margin: 0 0.2rem;
+  padding: 0.3rem 0.4rem;
+  display: block;
+  border-radius: 5px;
+  font-size: 20px;
+}
+
+nav > ul > li:hover {
+  background-color: var(--background-color);
+  color: var(--hover-color);
+  cursor: pointer;
+}
+
+/* Footer */
+
+footer {
+  padding: 20px;
+  text-align: center;
+  background-color: var(--header-color);
+  color: var(--background-color);
+  position: relative;
+  bottom: 0;
+  display: block;
+  width: 100vw;
+}
+
+footer h2 {
+  color: var(--header-text-color);
+}
+
+/* Home Page */
+.home-photo {
+  max-width: 35%;
+}
+
+.home-page {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.home-page-info {
+  display: block;
+  border: var(--border-color);
+  border-style: solid;
+  padding: 20px;
+  border-radius: 20px;
+}
+
+.home-small-info {
+  padding: 20px;
+  text-align: center;
+}
+
+/* About Me */
+.about-me-paragraph {
+  padding: 5% 10%;
+  line-height: 2rem;
+}
+
+/* Resume */
+
+.resume-item {
+  border-bottom: 3px solid var(--text-color);
+  margin-top: 40px;
+}
+
+.resume h2 {
+  text-decoration: underline;
+}
+
+.resume ul {
+  padding: 0px 0px 30px 0px;
+}
+
+.resume-item:last-of-type {
+  border: none;
+}
+
+.resume li {
+  padding: 0.5rem 2rem;
+  list-style: none;
+  font-weight: thin;
+}
+
+/* Projects */
+#projects-info .container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
