--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ h1,
 h2,
 h3,
 h4 {
+  margin-bottom: 1rem;
   color: var(--text-color);
 }
 
@@ -59,6 +60,10 @@ video {
   border: 3px solid var(--text-color);
 }
 
+ul > li {
+  margin-bottom: 10px;
+}
+
 /* Header and Navber */
 header {
   width: 100%;
@@ -67,12 +72,14 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  text-align: center;
   position: fixed;
   top: 0;
   padding: 0 20px;
 }
 
 header h1 {
+  margin: 0 1rem;
   color: var(--header-text-color);
 }
 
@@ -115,7 +122,7 @@ footer {
   text-align: center;
   background-color: var(--header-color);
   color: var(--background-color);
-  position: relative;
+  position: fixed;
   bottom: 0;
   display: block;
   width: 100vw;
@@ -172,6 +179,7 @@ footer h2 {
 
 .resume-item:last-of-type {
   border: none;
+  padding-bottom: 10rem;
 }
 
 .resume li {
@@ -184,4 +192,13 @@ footer h2 {
 #projects-info .container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+}
+
+#projects-info h1 {
+  margin-bottom: 1rem;
+}
+
+#projects-info h2 {
+  font-size: 1rem;
+  text-decoration: underline;
 }
