--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --background-color: #eff2e4;
+  --background-color: #faf9ed;
   --header-color: #d2c3b6;
   --header-text-color: white;
   --text-color: rgb(146, 109, 109);
@@ -24,14 +24,14 @@ body {
   color: var(--text-color);
   font-family: king;
   overflow-x: hidden;
-  height: 100vh;
+  position: relative;
+  min-height: 100vh;
+  padding: 6rem 0 9rem;
 }
 
 main {
-  padding: 100px 40px 120px 40px;
   margin: auto;
-  width: 80%;
-  height: 100%;
+  max-width: 85%;
 }
 
 h1,
@@ -58,10 +58,24 @@ img {
 video {
   border-radius: 5px;
   border: 3px solid var(--text-color);
+  object-fit: cover;
 }
 
 ul > li {
   margin-bottom: 10px;
+}
+
+.border {
+  border: 2px solid var(--border-color);
+  border-radius: 20px;
+}
+
+.landing {
+  background: #fff;
+  width: 100%;
+  height: 70%;
+  margin-bottom: 3rem;
+  padding: 3rem;
 }
 
 /* Header and Navber */
@@ -80,7 +94,12 @@ header {
 
 header h1 {
   margin: 0 1rem;
+  padding: 0 3rem;
   color: var(--header-text-color);
+}
+
+header a {
+  display: block;
 }
 
 nav {
@@ -105,12 +124,13 @@ nav > ul > li {
   margin: 0 0.2rem;
   padding: 0.3rem 0.4rem;
   display: block;
-  border-radius: 5px;
   font-size: 20px;
 }
 
 nav > ul > li:hover {
-  background-color: var(--background-color);
+  border: 2px solid var(--border-color);
+  border-radius: 5px;
+  background-color: #fff;
   color: var(--hover-color);
   cursor: pointer;
 }
@@ -122,7 +142,7 @@ footer {
   text-align: center;
   background-color: var(--header-color);
   color: var(--background-color);
-  position: fixed;
+  position: absolute;
   bottom: 0;
   display: block;
   width: 100vw;
@@ -133,33 +153,64 @@ footer h2 {
 }
 
 /* Home Page */
-.home-photo {
-  max-width: 35%;
+#home-top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  width: 80%;
 }
 
-.home-page {
+#home-intro {
+  padding: 5rem;
+}
+
+#home-intro h1 {
+  font-size: 3rem;
+}
+
+#home-intro p {
+  font-size: 1.4rem;
+  line-height: 2.4rem;
+}
+
+#home-photo {
+  max-height: 80vh;
+  margin: 0 3rem;
+}
+
+/* About Me */
+
+.about-me-paragraph {
+  line-height: 2rem;
+}
+
+.about-me-photo {
+  max-width: 30%;
+  margin-bottom: 1.2rem;
+}
+
+.about-me {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
 
-.home-page-info {
+.about-me-info {
   display: block;
-  border: var(--border-color);
-  border-style: solid;
-  padding: 20px;
-  border-radius: 20px;
+  background: transparent;
 }
 
-.home-small-info {
-  padding: 20px;
+.about-me-info h1 {
+  font-size: 2.4rem;
+}
+
+.about-me-info p {
+  font-size: 1.2rem;
+}
+
+.about-me-small-info {
   text-align: center;
-}
-
-/* About Me */
-.about-me-paragraph {
-  padding: 5% 10%;
-  line-height: 2rem;
 }
 
 /* Resume */
@@ -179,7 +230,6 @@ footer h2 {
 
 .resume-item:last-of-type {
   border: none;
-  padding-bottom: 10rem;
 }
 
 .resume li {
