Updated List of Projects

--- a/styles.css
+++ b/styles.css
@@ -255,6 +255,7 @@ footer h2 {
 #projects-info .container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  grid-gap: 3rem;
 }
 
 #projects-info h1 {
